# enterprise-automl-platform

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_TASK.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-ci.yml  docs-ci.yml  frontend-ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260711_1439-cd0b9869e948_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  middleware.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  audit.py  auth.py  datasets.py  eda.py  experiments.py  health.py  models.py  notifications.py  projects.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  permissions.py  utils.py
backend/app/core/security/: __init__.py  password.py  tokens.py
backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  mixins.py  seed.py  session.py  wait_for_db.py
backend/app/ml/: __init__.py  algorithms.py  eda.py  evaluation.py  explain.py  features.py  io.py  profiling.py  tracking.py  training.py
backend/app/models/: __init__.py  associations.py  audit.py  dataset.py  experiment.py  model.py  notification.py  permission.py  project.py  refresh_token.py  role.py  user.py
backend/app/repositories/: __init__.py  audit.py  base.py  dataset.py  experiment.py  model.py  notification.py  project.py  refresh_token.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  dataset.py  eda.py  experiment.py  features.py  model.py  notification.py  pagination.py  prediction.py  project.py  response.py  user.py
backend/app/services/: __init__.py  audit.py  auth.py  dataset.py  eda.py  experiment.py  model.py  notification.py  prediction.py  project.py
backend/app/storage/: __init__.py  base.py  local.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/scripts/: entrypoint.sh  worker-entrypoint.sh
backend/tests/: conftest.py
backend/tests/integration/: test_audit.py  test_auth.py  test_datasets.py  test_eda.py  test_experiments.py  test_projects.py  test_registry.py
backend/tests/unit/: test_algorithms.py  test_features.py  test_model_schema.py  test_profiling.py  test_security.py
docs/: api.md  architecture.md  backend.md  coding-standards.md  contributing.md  database.md  deployment.md  development.md  frontend.md  index.md  installation.md  requirements.txt
docs/screenshots/: README.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ProjectPicker.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: AppShell.tsx  NotificationBell.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx
frontend/src/components/ui/: Badge.test.tsx  Badge.tsx  Card.tsx  Modal.tsx  PageHeader.tsx  Spinner.tsx  StateViews.tsx
frontend/src/context/: AuthProvider.tsx  auth-context.ts
frontend/src/hooks/: useAuth.ts  useDatasets.ts  useExperiments.ts  useModels.ts  useNotifications.ts  useProjectSelection.ts  useProjects.ts  useTheme.ts
frontend/src/lib/: api.ts  queryClient.ts  tokenStore.ts  utils.test.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Datasets.tsx  Experiments.tsx  Login.tsx  Models.tsx  NotFound.tsx  Projects.tsx  Register.tsx
frontend/src/types/: api.ts
